# rt_kernel

./: .travis.yml  Cargo.toml  README.md  RTOS Thema.txt  \
.cargo/: config
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
src/allocator/: fixed_size_block.rs  linked_list.rs
src/scheduler/: context_switch.rs  mod.rs  thread.rs
src/task/: executor.rs  keyboard.rs  mod.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
